# Redian

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_redian_import.py
redian_source/: __init__.py
redian_source/agents/: llm_agent.py  mcp_agent.py  redian_agent.py
redian_source/agents/unused/: langchain_tools.py  llm_agent.py  mcp_agent.py
redian_source/attacks/: prompt_injection.py
redian_source/runner/: connect_mcp.py
redian_source/tests/: test_agents.py  test_prompt_injection.py  test_secret_exfiltration_attack.py
