[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redian-source"
version = "0.1.0"
description = "Automated red teaming framework for LLMs with tool/MCP access"
authors = [
    { name="Vivek Narayana", email="vivekpersonal400@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pydantic",
    "pytest",
    "docker",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["redian_source"] 